n8n/templates/deployment.yaml
---
# Source: n8n/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  labels:
    helm.sh/chart: n8n-0.25.2
    app.kubernetes.io/name: n8n
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/version: "1.58.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: n8n
      app.kubernetes.io/instance: n8n
      app.kubernetes.io/type: master
  template:
    metadata:
      annotations:
        checksum/config: 205ad59f2d2a268cca0b3f371df836a8201c6046902f6c33623527521b24340d
      labels:
        app.kubernetes.io/name: n8n
        app.kubernetes.io/instance: n8n
        app.kubernetes.io/type: master

    spec:
      serviceAccountName: n8n
      securityContext:
        fsGroup: 1000720000
        runAsGroup: 1000720000
        runAsNonRoot: true
        runAsUser: 1000720000
      containers:
        - name: n8n
          securityContext:
            {}
          image: "n8nio/n8n:1.58.2"
          imagePullPolicy: IfNotPresent
          lifecycle:
            {}
          ports:
            - name: http
              containerPort: 5678
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            {}
          volumeMounts:
            - name: data
              mountPath: /home/node/.n8n
            - name: config-volume
              mountPath: /n8n-config
      volumes:
        - name: "data"
          emptyDir: {}
        - name: config-volume
          configMap:
            name: n8n
