n8n/templates/service.yaml
---
# Source: n8n/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  labels:
    helm.sh/chart: n8n-0.25.2
    app.kubernetes.io/name: n8n
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/version: "1.58.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: n8n
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/type: master
