n8n/templates/ingress.yaml
---
# Source: n8n/templates/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: n8n
  labels:
    helm.sh/chart: n8n-0.25.2
    app.kubernetes.io/name: n8n
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/version: "1.58.2"
    app.kubernetes.io/managed-by: Helm
  annotations:
    route.openshift.io/termination: edge
spec:
  rules:
    - host: "n8n.apps.inf-tocp.pmb.cz"
      http:
        paths:
          - path: map[backend:map[service:map[name:n8n port:map[number:80]]] pathType:ImplementationSpecific]
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
